# stkweight

./: 404.html  Dockerfile  README.md  docker-compose.yml  index.html  interactive_bar_chart.html  main.py  mkdocs.yml  pyproject.toml
.claude/: mcp-servers.json
.claude/agents/: architect.md  planner.md  user-journey-mapper.md
.claude/commands/: plan.md  plans_user.md  user-flow.md
.claude/context/: file_adv.md
.claude/tdd-workflow/: SKILL.md
src/stkweight/: b_analyse.py  core.py  dash_server.py  log.py  server.py
src/stkweight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stkweight/server/: __main__.py  server.py
src/stkweight/server/models/: __init__.py  models.py
src/stkweight/server/routers/: __init__.py  admin.py  user.py  work.py
src/stkweight/server/utils/: __init__.py  auth_backends.py  database.py  user_manager.py
src/stkweight/view/: view_server.py
tests/: test_main.py
tests/resources/: data.csv  interactive_bar_chart.html  temp_analyse.html  weight.csv  weight2.csv
tests/resources2/: 银行流水.csv
tests/resources2/.ipynb_checkpoints/: weight-checkpoint.csv
