[project]
name = "stkweight"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.10.0",
    "fastapi>=0.116.1",
    "kaleido>=1.0.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-tornasync>=0.6.0.post2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.setuptools.package-data]
stkweight = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
